@@ -125,7 +125,7 @@ $wgAutoloadLocalClasses = array(
 	'HTMLRadioField' => 'includes/HTMLForm.php',
 	'HTMLInfoField' => 'includes/HTMLForm.php',
 	'Http' => 'includes/HttpFunctions.php',
-	'HttpRequest' => 'includes/HttpFunctions.php',
+	'HttpRequest' => 'includes/HttpFunctions.old.php',
 	'ImageGallery' => 'includes/ImageGallery.php',
 	'ImageHistoryList' => 'includes/ImagePage.php',
 	'ImageHistoryPseudoPager' => 'includes/ImagePage.php',
@@ -167,6 +167,7 @@ $wgAutoloadLocalClasses = array(
 	'MessageCache' => 'includes/MessageCache.php',
 	'MimeMagic' => 'includes/MimeMagic.php',
 	'MWException' => 'includes/Exception.php',
+	'MWHttpRequest' => 'includes/HttpFunctions.php',
 	'MWMemcached' => 'includes/memcached-client.php',
 	'MWNamespace' => 'includes/Namespace.php',
 	'OldChangesList' => 'includes/ChangesList.php',
